bg: fix homepage alignment

--- a/UI/assets/css/main.css
+++ b/UI/assets/css/main.css
@@ -95,7 +95,7 @@ button.see-all {
 .top-section-home {
     position: relative;
     height: 90vh;
-    margin-bottom: 370px;
+    margin-bottom: 200px;
 }
 .carousel-inner > .carousel-item {
 	transition: -webkit-transform 1.2 ease-in-out;
@@ -127,7 +127,10 @@ button.see-all {
 	}
 	.carousel-caption h5 {
         font-size: 18px;
-	}
+    }
+    .top-section-home {
+        margin-bottom: 420px;
+    }
 	
 }
 @media (min-width: 400px) and (max-width: 768px) {
@@ -140,8 +143,11 @@ button.see-all {
         font-size: 15px;
         color: var(--sc-clr);
     }
+    .top-section-home {
+        margin-bottom: 420px;
+    }
 }
-@media (min-width: 700px) and (max-width: 1024px){
+@media (min-width: 768px) and (max-width: 1024px){
 	.carousel-item, .carousel-item img {
 		height: 90vh;
     }
@@ -180,12 +186,10 @@ button.see-all {
 .top-section h2 {
     color: var(--alt-clr);
 }
-.search {
+.intro {
     text-align: center;
     max-width: 100%;
-    padding: 80px 0px;
-}
-.search{  margin-bottom: -300px;
+    padding-bottom: 80px;
     font-size: 30px;
     color: var(--sc-clr);
 }
@@ -245,7 +249,7 @@ button.see-all {
 /*---- 2.4 Featured Courses ----*/
 .featured-courses.flex1.container1{
     background-color: var(--alt-bg-2);
-    margin-top: -60px;
+    margin: 0 !important;
 }
 
 /*---- 2.5 How we work ----*/
